[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Nabatchikov Ilya <nabatshikov99@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
flake8 = "^5.0.4"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
